# rustlike

./: .gitignore  Cargo.toml
config/: console.toml
src/: config.rs  main.rs  map.rs  player.rs
src/components/: mod.rs  player.rs
src/ui/: mod.rs
