[package]
name = "rustlike"
version = "0.1.0"
authors = ["Jacob Boone <jboone989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = "0.15.0"
specs = "0.16.1"
specs-derive = "0.4.1"
config = "0.10.1"
lazy_static = "1.4.0"
serde = "1.0.115"
serde_derive = "1.0.115"